--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 		  <th style="width: 100px">Kembali</th>
           <th style="width: 180px">Item Number</th>
           <th>Deskripsi</th>
+          <th>PO</th>		
           <th style="width: 100px">Jumlah</th>
 		  <th style="width: 100px">Nomor Buku</th>
         </tr>
@@ -259,6 +260,7 @@
 		  { key: "Kembali", formatter: formatTanggal },
           { key: "itemnumber" },
           { key: "Deskripsi" },
+          { key: "PO" },		
           { key: "Jumlah", formatter: formatNumber },
 		  { key: "nomor"}
         ];
