--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 		  <th style="width: 100px">Kembali</th>
           <th style="width: 180px">Item Number</th>
           <th>Deskripsi</th>
-          <th>PO</th>		
+          <th style="width: 100px">PO</th>		
           <th style="width: 100px">Jumlah</th>
 		  <th style="width: 100px">Nomor Buku</th>
         </tr>
